[FIX] remap reservation test mockMvc endpoint